--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-PORT = 8000
+#BACKEND
 NODE_ENV = production
 DB_LOCAL_URI=mongodb://mongo:27017/mernapp
 JWT_SECRET=F66DB4EC116F3
@@ -10,7 +10,9 @@ SMTP_USER=%YOUR_MAILTRAP_USERNAME%
 SMTP_PASS=%YOUR_MAILTRAP_PASS%
 SMTP_FROM_NAME=Technico
 SMTP_FROM_EMAIL=noreply@jvlcart.com
-BACKEND_URL=http://127.0.0.1:8000
+BACKEND_URL=http://127.0.0.1:${BACKEND_PORT}
 FRONTEND_URL=http://127.0.0.1:3000
 STRIPE_API_KEY=%YOUR_STRIPE_PUBLIC_KEY%
 STRIPE_SECRET_KEY=%YOUR_STRIPE_SECRET_KEY%
+
+
