--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,46 @@
-version: '3.8'
+  version: '3.8'
 
-services:
+  services:
 
-  mongo:
-    image: mongo
-    restart: always
-    tmpfs:
-      - /data/db  # Use tmpfs for MongoDB data storage
-    ports:
-      - 8001:27017
-    volumes:
-      - mongo_data:/data/db
-      - ./backend/db:/data-bkp  # Mount the backup directory here
+    mongo:
+      image: mongo
+      restart: always
+      tmpfs:
+        - /data/db  # Use tmpfs for MongoDB data storage
+      
+      ports:
+        - 8001:27017
+      volumes:
+        - mongo_data:/data/db
+        - ./backend/db:/data-bkp  # Mount the backup directory here
+        - ./mongo-init:/docker-entrypoint-initdb.d
 
-  backend:
-    build: ./backend
-    restart: always
-    ports:
-      - 8000:8000  # Assuming your Node.js app runs on port 8000
-    environment:
-      NODE_ENV: development
-      MONGO_URI: mongodb://mongo:27017/mernapp
-    depends_on:
-      - mongo
-    volumes:
-      - ./backend:/app  # Bind mount backend source code
+    backend:
+      build: ./backend
+      environment:
+        - BACKEND_PORT=${BACKEND_PORT} 
+      restart: always
+      ports:
+        - ${BACKEND_PORT}:${BACKEND_PORT}
 
-  frontend:
-    build: ./frontend
-    restart: always
-    depends_on:
-      - backend
-    ports:
-      - 3000:3000
-    volumes:
-      - ./frontend:/app  # Bind mount frontend source code
-    environment:
-      - CHOKIDAR_USEPOLLING=true
+      depends_on:
+        - mongo
+      volumes:
+        - ./backend:/app  # Bind mount backend source code
 
-volumes:
-  mongo_data:
+    frontend:
+      build: ./frontend
+      environment:
+        - CHOKIDAR_USEPOLLING=true
+        - BACKEND_API_URL=${BACKEND_API_URL} 
+      restart: always
+      depends_on:
+        - backend
+      ports:
+        - "3000:3000" 
+      volumes:
+        - ./frontend:/app  # Bind mount frontend source code
+        
+
+  volumes:
+    mongo_data:
